--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Your Name",
-            "email": "your-email@example.com"
+            "name": "fatih Koç",
+            "email": "fathkccc@gmail.com"
         }
     ]
 }
